Generics limit types added